--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,13 +69,21 @@
 }
 
 .btn {
+    width: 140px;
+    height: 52px;
     border-radius: 8px;
     background-color: #FF5400;
-    text-align: center;
     color: #FFF;
     font-family: 'Mulish';
     font-size: 16px;
     font-weight: 700;
+    border: 0;
+    margin-left: 20px;
+}
+
+.btn img{
+    margin-top: -10px;
+    
 }
 
 .our-popular {
@@ -425,12 +433,12 @@ footer {
     font-weight: 400;
 }
 
-.footer-title h3{
+.footer-title h3 {
     padding-top: 110px;
     margin-bottom: 15px;
 }
 
-.footer-title p{
+.footer-title p {
     margin-bottom: 33px;
 }
 
@@ -496,6 +504,12 @@ footer {
         font-weight: 400;
         border: none;
 
+    }
+
+    .btn {
+        width: 230px;
+        height: 52px;
+       margin-left: 0px;
     }
 
     .box-1 {
